--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.16",
     "prettier": "2.7.1",
+    "react-xmasonry": "^3.0.6",
     "tailwindcss": "^3.1.8",
     "typescript": "4.7.4"
   }
