--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "deploy": "firebase deploy"
   },
   "dependencies": {
+    "axios": "^0.27.2",
+    "dashify": "^2.0.0",
+    "firebase-admin": "^11.0.1",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-modal": "^3.15.1"
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^12.2.5",
@@ -34,7 +37,6 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.16",
     "prettier": "2.7.1",
-    "react-xmasonry": "^3.0.6",
     "tailwindcss": "^3.1.8",
     "typescript": "4.7.4"
   }
