--- a/package.json
+++ b/package.json
@@ -6,13 +6,11 @@
     "dev": "next dev",
     "build": "next build && next export",
     "start": "next start",
-    "lint": "next lint",
-    "deploy": "firebase deploy"
+    "lint": "next lint"
   },
   "dependencies": {
     "axios": "^0.27.2",
     "dashify": "^2.0.0",
-    "firebase-admin": "^11.0.1",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
