--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mikecousins/react-pdf": "^6.1.1",
+    "@next/font": "^13.2.4",
+    "aws-amplify": "^5.0.2",
     "axios": "^0.27.2",
-    "dashify": "^2.0.0",
-    "next": "12.2.5",
+    "next": "13.2.4",
+    "pdfjs-dist": "^2.16.105",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "swr": "^1.3.0"
