--- a/amplify.yml
+++ b/amplify.yml
@@ -4,7 +4,7 @@ applications:
       phases:
         preBuild:
           commands:
-            - npm install
+            - npm ci
         build:
           commands:
             - npm run build
