--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
+    "next-router-mock": "^0.9.3",
     "postcss": "^8.4.16",
     "prettier": "2.7.1",
     "tailwindcss": "^3.1.8",
