--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "plaiceholder": "^3.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.9.0",
     "sharp": "^0.32.1",
     "swr": "^1.3.0"
   },
