--- a/.gitignore
+++ b/.gitignore
@@ -45,7 +45,7 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
-/assets/*
+/assets/images
 
 #amplify-do-not-edit-begin
 amplify/\#current-cloud-backend
