--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,8 +7,10 @@
         "plugin:react/recommended",
         "airbnb",
         "prettier",
-        "plugin:@next/next/recommended"
+        "plugin:@next/next/recommended",
+        "plugin:@typescript-eslint/recommended"
     ],
+    "parser": "@typescript-eslint/parser",
     "parserOptions": {
         "ecmaFeatures": {
             "jsx": true
@@ -16,6 +18,16 @@
         "ecmaVersion": 12,
         "sourceType": "module"
     },
-    "plugins": ["react"],
-    "rules": {}
+    "plugins": ["react", "@typescript-eslint"],
+    "ignorePatterns": ["src/ui-components/**", "src/models/**"],
+    "rules": {
+        "react/react-in-jsx-scope": "off",
+        "react/jsx-filename-extension": ["warn", { "extensions": [".ts", ".tsx"] }],
+        "react/function-component-definition": "off",
+        "no-unused-vars": "off",
+        "@typescript-eslint/no-unused-vars": ["warn"],
+        "react/button-has-type": "off",
+        "import/extensions": "off",
+        "import/no-unresolved": "off"
+    }
 }
