--- a/package.json
+++ b/package.json
@@ -27,23 +27,38 @@
   },
   "devDependencies": {
     "@aws-amplify/datastore": "^4.6.3",
-    "@next/eslint-plugin-next": "^12.2.5",
+    "@next/eslint-plugin-next": "^13.2.4",
     "@testing-library/dom": "^9.3.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
-    "@types/jest": "^29.5.1",
+    "@types/babel__core": "^7.20.5",
+    "@types/babel__generator": "^7.27.0",
+    "@types/babel__template": "^7.4.4",
+    "@types/babel__traverse": "^7.28.0",
+    "@types/graceful-fs": "^4.1.9",
+    "@types/istanbul-lib-coverage": "^2.0.6",
+    "@types/istanbul-lib-report": "^3.0.3",
+    "@types/jest": "^29.5.14",
+    "@types/json-schema": "^7.0.15",
     "@types/node": "18.7.8",
+    "@types/prop-types": "^15.7.15",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
-    "@types/react-modal": "^3.13.1",
+    "@types/react-modal": "^3.16.3",
+    "@types/scheduler": "^0.26.0",
+    "@types/stack-utils": "^2.0.3",
+    "@types/testing-library__jest-dom": "^5.14.9",
+    "@types/tough-cookie": "^4.0.5",
+    "@types/yargs": "^17.0.35",
+    "@types/yargs-parser": "^21.0.3",
     "@typescript-eslint/eslint-plugin": "^5.33.1",
     "@typescript-eslint/parser": "^5.33.1",
     "autoprefixer": "^10.4.8",
     "babel-preset-jest": "^29.5.0",
     "eslint": "^8.22.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-next": "12.2.5",
+    "eslint-config-next": "13.2.4",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.6.1",
